bk_ida/gobmkida/c1/new_test_array
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/new_test_array/src/patterns/dfa.c:1137:28: error: use of undeclared identifier 'gtest'
memset( &gtest, 0, sizeof( gtest)); 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/new_test_array/src/patterns/dfa.c:1137:10: error: use of undeclared identifier 'gtest'
memset( &gtest, 0, sizeof( gtest)); 
         ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/new_test_array/src/obj/3/dfa.o] Error 1
